Fix math overflow-x

--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -439,3 +439,8 @@ h6:hover .anchor {
 [dir="rtl"] .paginav .next {
     text-align: left;
 }
+
+.katex-display, .MathJax {
+    overflow-x: auto;
+    overflow-y: hidden;
+}
